-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.15.0
-
Windows 10
-
-
b5428d0903309918d88ae13c7c1c0a5b2f45c831 (qt-creator/qt-creator/4.15)
The name of custom target defined by add_custom_target() does not appear in the Locator with "cm" command.
It was appearing in Qt Creator 4.14.1.
It is verified in a shell that the custom target does exist and it can also be build by running cmake with the --target option and it produces the relevant .ts file.
How to reproduce :
Please use qtcreatorbug25726.zip and type "cm" in the Locator.
- is duplicated by
-
QTCREATORBUG-25753 cmake add_custom_target are not listed in search window using "cm" prefix
-
- Closed
-
-
QTCREATORBUG-25761 Custom CMake targets are not shown in CMake build step settings
-
- Closed
-